--- a/index.html
+++ b/index.html
@@ -1090,6 +1090,11 @@
                                 <label for="afa-retailer-full-name" class="block text-sm font-medium text-gray-700 mb-1">Full Name<span class="text-red-500">*</span>: </label>
                                 <input type="text" id="afa-retailer-full-name" name="fullName" class="input-field block w-full" placeholder="Evelyn Esi Gyamfi" required>
                             </div>
+                            <!-- New Phone Number Field for Retailer -->
+                            <div>
+                                <label for="afa-retailer-phone-number" class="block text-sm font-medium text-gray-700 mb-1">Phone Number<span class="text-red-500">*</span>: </label>
+                                <input type="tel" id="afa-retailer-phone-number" name="phoneNumber" class="input-field block w-full" placeholder="e.g., 0540000000" required>
+                            </div>
                             <div>
                                 <label for="afa-retailer-ghana-card" class="block text-sm font-medium text-gray-700 mb-1">Ghana Card Number<span class="text-red-500">*</span>: </label>
                                 <input type="text" id="afa-retailer-ghana-card" name="ghanaCard" class="input-field block w-full" placeholder="GHA-000000000-0" required>
@@ -1305,6 +1310,8 @@
 
             const afaRegistrationRetailerForm = document.getElementById('afaRegistrationRetailerForm'); // AFA registration form
             const afaRetailerMessageBox = document.getElementById('afa-retailer-message-box'); // AFA message box
+            const afaRetailerPhoneNumberInput = document.getElementById('afa-retailer-phone-number'); // New AFA retailer phone number input
+
 
             // AFA Accordion elements
             const afaPurchaseToggle = document.getElementById('afa-purchase-toggle');
@@ -1841,12 +1848,13 @@
                 }
 
                 const fullName = document.getElementById('afa-retailer-full-name').value.trim();
+                const phoneNumber = afaRetailerPhoneNumberInput.value.trim(); // Get the new phone number
                 const ghanaCard = document.getElementById('afa-retailer-ghana-card').value.trim();
                 const dob = document.getElementById('afa-retailer-dob').value.trim();
                 const location = document.getElementById('afa-retailer-location').value.trim();
                 const occupation = document.getElementById('afa-retailer-occupation').value.trim();
 
-                if (!fullName || !ghanaCard || !dob || !location || !occupation) {
+                if (!fullName || !phoneNumber || !ghanaCard || !dob || !location || !occupation) {
                     displayAfaRetailerMessage('Please fill in all required fields.', 'error');
                     return;
                 }
@@ -1867,6 +1875,7 @@
                             { display_name: "Customer ID", variable_name: "customer_id", value: currentUserUid },
                             { display_name: "Service Type", variable_name: "service_type", value: "AFA Call Bundle" },
                             { display_name: "Full Name", variable_name: "full_name", value: fullName },
+                            { display_name: "Phone Number", variable_name: "phone_number", value: phoneNumber }, // Include phone number
                             { display_name: "Ghana Card", variable_name: "ghana_card", value: ghanaCard },
                             { display_name: "Date of Birth", variable_name: "date_of_birth", value: dob },
                             { display_name: "Location", variable_name: "location", value: location },
@@ -1887,7 +1896,7 @@
                                 paymentReference: paymentReference,
                                 date: new Date().toLocaleString(),
                                 status: 'Submitted', // Changed from 'Registered' to 'Submitted'
-                                details: { fullName, ghanaCard, dob, location, occupation }
+                                details: { fullName, phoneNumber, ghanaCard, dob, location, occupation } // Include phone number
                             };
                             currentOrders.push(newAfaOrder);
                             localStorage.setItem(`userOrders_${currentUserUid}`, JSON.stringify(currentOrders));
@@ -1995,6 +2004,7 @@
                                 <p><strong>Service Type:</strong> AFA Call Bundle</p>
                                 <p><strong>Registration Fee:</strong> GHS ${order.price.toFixed(2)}</p>
                                 <p><strong>Full Name:</strong> ${order.details.fullName}</p>
+                                <p><strong>Phone Number:</strong> ${order.details.phoneNumber}</p> <!-- Display phone number -->
                                 <p><strong>Ghana Card:</strong> ${order.details.ghanaCard}</p>
                                 <p><strong>Date of Birth:</strong> ${order.details.dob}</p>
                                 <p><strong>Location:</strong> ${order.details.location}</p>
@@ -2198,7 +2208,7 @@
                 mainFaqContent.classList.toggle('open');
                 mainFaqToggleButton.classList.toggle('active');
 
-                if (mainFaqContent.classList.contains('open')) {
+                if (mainFajContent.classList.contains('open')) {
                     mainFaqContent.style.maxHeight = mainFaqContent.scrollHeight + "px";
                 } else {
                     mainFaqContent.style.maxHeight = "0";
