--- a/index.html
+++ b/index.html
@@ -1318,8 +1318,8 @@
             const mtnRawPrices = {
                 "1GB": "5.50Ghc", "2GB": "10.50Ghc", "3GB": "15.00Ghc", "4GB": "21.00Ghc",
                 "5GB": "25.00Ghc", "6GB": "29.00Ghc", "8GB": "38.00Ghc", "10GB": "45.00Ghc",
-                "15GB": "68.00Ghc", "20GB": "89.00Ghc", "30GB": "127.00Ghc", "50GB": "210.00Ghc",
-                "100GB": "408.00Ghc"
+                "15GB": "68.00Ghc", "20GB": "89.00Ghc", "30GB": "127.00Ghc", "50GB": "210.00Ghc"
+            
             };
 
             // AirtelTigo Prices from the first attached image - UPDATED
