--- a/index.html
+++ b/index.html
@@ -1323,20 +1323,20 @@
         document.addEventListener('DOMContentLoaded', () => {
             // MTN Prices with Server A and Server B options (serverA will be ignored on site until you provide new prices)
             const mtnRawPrices = {
-                "1GB": { "serverA": 5.00, "serverB": 5.60 },
-                "2GB": { "serverA": 9.00, "serverB": 11.50 },
-                "3GB": { "serverA": 14.00, "serverB": 15.50 },
-                "4GB": { "serverA": 19.50, "serverB": 22.00 },
-                "5GB": { "serverA": 23.50, "serverB": 25.50 },
-                "6GB": { "serverA": 28.00, "serverB": 33.00 },
-                "7GB": { "serverA": 35.00, "serverB": null },
+                "1GB": { "serverA": 4.60, "serverB": 5.60 },
+                "2GB": { "serverA": 9.50, "serverB": 11.50 },
+                "3GB": { "serverA": 13.50, "serverB": 15.50 },
+                "4GB": { "serverA": 18.00, "serverB": 22.00 },
+                "5GB": { "serverA": 22.20, "serverB": 25.50 },
+                "6GB": { "serverA": 27.00, "serverB": 33.00 },
+                "7GB": { "serverA": null, "serverB": null },
                 "8GB": { "serverA": 36.00, "serverB": 40.50 },
-                "10GB": { "serverA": 44.50, "serverB": 47.00 },
-                "15GB": { "serverA": 66.00, "serverB": 70.00 },
-                "20GB": { "serverA": 88.00, "serverB": 95.00 },
-                "24GB": { "serverA": null, "serverB": 115.00 },
-                "30GB": { "serverA": 126.50, "serverB": 135.00 },
-                "50GB": { "serverA": 210.00, "serverB": null }
+                "10GB": { "serverA": 43.00, "serverB": 47.00 },
+                "15GB": { "serverA": 63.00, "serverB": 70.00 },
+                "20GB": { "serverA": 83.00, "serverB": 95.00 },
+                "25GB": { "serverA": 102.00, "serverB": 115.00 },
+                "30GB": { "serverA": 122.00, "serverB": 135.00 },
+                "50GB": { "serverA": null, "serverB": null }
             };
 
             // AirtelTigo Prices (single server)
